--- a/public/html/editor/copyEditor.html
+++ b/public/html/editor/copyEditor.html
@@ -3,7 +3,7 @@
   x-data="copyEditor"
   x-show="$store.edit.showCopyModal"
   class="fixed inset-0 z-[98] flex items-center justify-center w-full h-full bg-black bg-opacity-50">
-  <div class="bg-white dark:bg-vdp shadow-lg w-2/3 h-[85%] flex flex-col">
+  <div class="bg-white dark:bg-vdp shadow-lg w-[80%] max-h-[90%] flex flex-col">
     <!-- Header -->
     <header class="flex justify-between items-center p-4 bg-vls2 dark:bg-vdp border-b border-vls/40">
       <div>
@@ -26,9 +26,9 @@
       </div>
     </header>
     <main class="flex-grow overflow-y-auto p-4 min-h-0 h-full bg-vlp dark:bg-vdp2">
-      <!-- Deposit & Discount Editing -->
+      <!-- Deposit & Discount & Dates -->
       <section class="grid grid-cols-2 gap-4 mb-4">
-        <!-- Deposit/Date -->
+        <!-- Deposit Component-->
         <div class="p-2 rounded border border-vls/40 shadow dark:bg-vdp flex justify-between">
           <!-- Deposit -->
           <div class="w-1/2 relative mr-4">
@@ -37,15 +37,14 @@
               <div class="relative">
                 <input
                   id="depositInput"
-                  x-ref="depInput"
+                  x-ref="depInputCopy"
                   type="text"
-                  :placeholder="'£' + $store.edit.selectedCopy.deposit_value"
-                  onfocus="this.type='number'"
-                  onblur="this.type='text'"
-                  class="w-full p-1 pr-20 border text-sm rounded border-vls/40 focus:outline-none focus:ring-1 focus:ring-vls/60 bg-blue-50 hover:bg-blue-100 dark:cursor-pointer mt-0 dark:bg-vdp2 hover:dark:brightness-125 transition duration-200" />
+                  :placeholder="$store.edit.selectedCopy.deposit_type === 0 ? '£'+$store.edit.selectedCopy.deposit_value : $store.edit.selectedCopy.deposit_value + '%'"
+                  class="mod-input" />
                 <div class="absolute inset-y-0 right-0 flex items-center pr-2 space-x-1">
                   <!-- Trash Button -->
                   <button
+                    @click="$store.edit.removeDeposit(isCopy = true);"
                     class="table-interaction-icon-red !text-vls2 hover:!text-red-500 dark:!text-vds3light dark:hover:!text-red-500">
                     <svg class="size-4">
                       <use href="/icons/icons.svg#trash" />
@@ -53,14 +52,15 @@
                   </button>
                   <!-- Edit Button -->
                   <button
-                    @click="$store.effs.addEff($refs.rotateDepo, 'spin', 500); $nextTick(() => { $refs.depInput.focus() });"
+                    @click="$store.edit.changeDepositType(isCopy = true); $store.effs.addEff($refs.rotateDepCopy, 'spin', 500); $nextTick(() => { $refs.depInputCopy.focus() });"
                     class="table-interaction-icon-red !text-vls2 hover:!text-orange-500 dark:!text-vds3light dark:hover:!text-orange-500">
-                    <svg x-ref="rotateDepo" class="size-4">
+                    <svg x-ref="rotateDepCopy" class="size-4">
                       <use href="/icons/icons.svg#rotate" />
                     </svg>
                   </button>
                   <!-- Check Button -->
                   <button
+                    @click="$store.edit.addDeposit(isCopy = true)"
                     class="table-interaction-icon-red !text-vls2 hover:!text-vla2 dark:!text-vds3light dark:hover:!text-vla2">
                     <svg class="size-4">
                       <use href="/icons/icons.svg#check-circle" />
@@ -70,39 +70,21 @@
               </div>
             </div>
           </div>
-          <!-- Date -->
-          <div class="w-1/2 relative">
-            <span class="absolute top-0 left-0 text-sm text-gray-500">Date issued:</span>
-            <template x-if="$store.edit.showCopyModal === true">
-              <div class="mt-6" x-data="flatpickrWidget('selectedCopy', 'date')" x-init="init()">
-                <!-- Flatpickr text input -->
-                <input
-                  x-ref="fpInput"
-                  type="text"
-                  id="dateInput"
-                  class="w-full p-1 border text-sm rounded border-vls/40 focus:outline-none focus:ring-1 focus:ring-vls/60 bg-blue-50 hover:bg-blue-100 dark:cursor-pointer mt-0 dark:bg-vdp2 hover:dark:brightness-125 transition duration-200" />
-              </div>
-            </template>
-          </div>
-        </div>
 
-        <!-- Discount Component -->
-        <div class="p-2 rounded border border-vls/40 shadow dark:bg-vdp flex justify-between">
-          <div class="w-1/2 relative mr-4">
+          <div class="w-1/2 relative">
             <span class="absolute top-0 left-0 text-sm text-gray-500">Discount:</span>
             <div class="mt-6">
               <div class="relative">
                 <input
-                  id="discountInput"
-                  x-ref="discInput"
+                  id="discountInputCopy"
+                  x-ref="discInputCopy"
                   type="text"
-                  :placeholder="'£'+$store.edit.selectedCopy.discount_value"
-                  onfocus="this.type='number'"
-                  onblur="this.type='text'"
-                  class="w-full p-1 border text-sm rounded border-vls/40 focus:outline-none focus:ring-1 focus:ring-vls/60 bg-blue-50 hover:bg-blue-100 dark:cursor-pointer mt-0 dark:bg-vdp2 hover:dark:brightness-125 transition duration-200" />
+                  :placeholder="$store.edit.selectedCopy.discount_type === 0 ? '£'+$store.edit.selectedCopy.discount_value : $store.edit.selectedCopy.discount_value + '%'"
+                  class="mod-input" />
                 <div class="absolute inset-y-0 right-0 flex items-center pr-2 space-x-1">
                   <!-- Trash Button -->
                   <button
+                    @click="$store.edit.removeDiscount(isCopy = true);"
                     class="table-interaction-icon-red !text-vls2 hover:!text-red-500 dark:!text-vds3light dark:hover:!text-red-500">
                     <svg class="size-4">
                       <use href="/icons/icons.svg#trash" />
@@ -110,14 +92,15 @@
                   </button>
                   <!-- Edit Button -->
                   <button
-                    @click="$store.effs.addEff($refs.rotateDisc, 'spin', 500); $nextTick(() => { $refs.discInput.focus() });"
+                    @click="$store.edit.changeDiscountType(isCopy = true); $store.effs.addEff($refs.rotateDiscCopy, 'spin', 500); $nextTick(() => { $refs.discInputCopy.focus() });"
                     class="table-interaction-icon-red !text-vls2 hover:!text-orange-500 dark:!text-vds3light dark:hover:!text-orange-500">
-                    <svg x-ref="rotateDisc" class="size-4">
+                    <svg x-ref="rotateDiscCopy" class="size-4">
                       <use href="/icons/icons.svg#rotate" />
                     </svg>
                   </button>
                   <!-- Check Button -->
                   <button
+                    @click="$store.edit.addDiscount(isCopy = true)"
                     class="table-interaction-icon-red !text-vls2 hover:!text-vla2 dark:!text-vds3light dark:hover:!text-vla2">
                     <svg class="size-4">
                       <use href="/icons/icons.svg#check-circle" />
@@ -127,19 +110,42 @@
               </div>
             </div>
           </div>
-          <!-- Due By Date -->
+        </div>
+        <!-- Discount Component -->
+        <div class="p-2 rounded border border-vls/40 shadow dark:bg-vdp flex justify-between">
+          <!-- Date -->
+          <div class="w-1/2 relative">
+            <span class="absolute top-0 left-0 text-sm text-gray-500">Date issued:</span>
+            <div x-data="{}" class="mt-6 mr-4">
+              <input
+                x-ref="copyDateInput"
+                type="text"
+                x-init="
+                $store.datePicker.createNew(
+                  $refs.copyDateInput,
+                  'edit',
+                  'selectedCopy.date'
+                )
+              "
+                class="mod-input" />
+            </div>
+          </div>
+          <!-- Due by Date -->
           <div class="w-1/2 relative">
             <span class="absolute top-0 left-0 text-sm text-gray-500">Due by date:</span>
-            <template x-if="$store.edit.showCopyModal === true">
-              <div class="mt-6" x-data="flatpickrWidget('selectedCopy', 'due_by_date')" x-init="init()">
-                <!-- Flatpickr text input -->
-                <input
-                  x-ref="fpInput"
-                  type="text"
-                  id="dueDateInput"
-                  class="w-full p-1 border text-sm rounded border-vls/40 focus:outline-none focus:ring-1 focus:ring-vls/60 bg-blue-50 hover:bg-blue-100 dark:cursor-pointer mt-0 dark:bg-vdp2 hover:dark:brightness-125 transition duration-200" />
-              </div>
-            </template>
+            <div x-data="{}" class="mt-6">
+              <input
+                x-ref="copyDueDateInput"
+                type="text"
+                x-init="
+              $store.datePicker.createNew(
+                $refs.copyDueDateInput,
+                'edit',
+                'selectedCopy.due_by_date'
+              )
+            "
+                class="mod-input" />
+            </div>
           </div>
         </div>
       </section>
