--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -1,26 +1,23 @@
 <div x-data="editView" class="border rounded border-vls/40 p-2 shadow ml-2 h-full bg-vlp dark:bg-vdp2">
   <!-- When no invoice selected -->
-  <template x-if="!$store.edit.showInvoiceItems">
+  <template x-if="$store.edit.invoiceViewMode === 'none'">
     <div class="flex items-center justify-center h-full text-center text-vls3 dark:text-vds">
       <p class="text-xl">Pick an invoice from the list to view details.</p>
     </div>
   </template>
-
-  <!-- Invoice Details Display (Read-Only) -->
-  <template x-if="$store.edit.showInvoiceItems && !$store.edit.editing && !$store.edit.openEditModal">
+  <!-- Viewing Parent Invoice  -->
+  <template x-if="$store.edit.invoiceViewMode === 'viewParent'">
     <div class="overflow-y-auto h-full p-2 text-vls2 dark:text-vds table-scrollbar">
       <div>
         <div
-          class="mb-2 flex justify-between items-center rounded bg-vls2 text-vlp dark:bg-vdp border border-vls/40 shadow p-2 font-medium">
-          <div>
-            <span class="mr-1">Invoice:</span>
-            <span x-text="$store.edit.invoiceItems.invoice.invoice_number"></span>
-          </div>
-          <div class="flex gap-4">
-            <span class="ml-4 mr-1">Date:</span>
-            <span x-text="$store.edit.invoiceItems.invoice.date"></span>
-            <p>Due-by-date:</p>
-            <span x-text="$store.edit.invoiceItems.invoice.due_by_date"></span>
+          class="mb-2 flex items-center rounded bg-vls2 text-vlp dark:bg-vdp border border-vls/40 shadow p-2 text-base">
+          <span class="mr-2">Invoice:</span>
+          <span x-text="$store.edit.currentInvoice.invoice_number" class="font-medium"></span>
+          <div class="flex w-full items-center place-self-end justify-end">
+            <span class="mr-2">Date:</span>
+            <span x-text="$store.edit.currentInvoice.totals.date" class="mr-4 font-medium"></span>
+            <p class="mr-2">Due-by-date:</p>
+            <span x-text="$store.edit.currentInvoice.totals.due_by_date" class="font-medium"></span>
           </div>
         </div>
         <!-- Client Details -->
@@ -44,26 +41,30 @@
         </div>
         <!-- Invoice Items Table -->
         <div class="relative p-2 border rounded border-vls/40">
-          <div><p class="text-red-500">search bar</p></div>
+          <input
+            type="text"
+            placeholder="Search invoice items..."
+            class="srch-style"
+            x-model="$store.edit.currentInvoice.searchQuery" />
           <div class="relative py-0 overflow-y-auto table-scrollbar" style="max-height: 30vh">
             <table class="w-[calc(100%-10px)] table-auto border-separate px-0.5" style="border-spacing: 0 10px">
               <thead class="sticky top-0 table-head-style border-clipper">
                 <tr>
-                  <th class="border text-left border-transparent round-left-border p-2 text-base w-[50%]">Name</th>
-                  <th class="p-2 text-left w-[15%]">Type</th>
-                  <th class="p-2 text-right w-[15%]">Qty</th>
-                  <th class="p-2 text-right w-[20%] round-right-border">Price</th>
+                  <th class="border text-left border-transparent round-left-border p-1.5 text-base w-[50%]">Name</th>
+                  <th class="p-1.5 text-left w-[15%]">Type</th>
+                  <th class="p-1.5 text-right w-[15%]">Qty</th>
+                  <th class="p-1.5 text-right w-[20%] round-right-border">Price</th>
                 </tr>
               </thead>
 
               <tbody class="table-body-style table-scrollbar">
-                <template x-for="item in $store.edit.invoiceItems.invoiceItems" :key="item.frontendId">
+                <template x-for="item in $store.edit.filteredItems" :key="item.id">
                   <tr class="border-hover-ring-efect">
-                    <td class="p-2 truncate round-left-border text-sm" x-text="item.name" style="width: 50%"></td>
-                    <td class="p-2 text-sm" x-text="item.type" style="width: 15"></td>
-                    <td class="p-2 text-right text-sm" x-text="item.quantity" style="width: 15%"></td>
+                    <td class="p-1 truncate round-left-border text-sm" x-text="item.name" style="width: 50%"></td>
+                    <td class="p-1 text-sm" x-text="item.type" style="width: 15"></td>
+                    <td class="p-1 text-right text-sm" x-text="item.quantity" style="width: 15%"></td>
                     <td
-                      class="p-2 text-right round-right-border text-sm"
+                      class="p-1 text-right round-right-border text-sm"
                       x-text="'£' + item.price"
                       style="width: 20%"></td>
                   </tr>
@@ -80,60 +81,66 @@
             <h2 class="font-semibold text-base">Invoice Summary</h2>
             <div class="flex justify-between">
               <span>Subtotal:</span>
-              <span x-text="'£' + $store.edit.invoiceItems.invoice.subtotal_pre_discount"></span>
+              <span x-text="'£' + $store.edit.currentInvoice.totals.subtotal_pre_discount"></span>
             </div>
-            <template x-if="$store.edit.invoiceItems.invoice.discount_value > 0">
+            <template x-if="$store.edit.currentInvoice.totals.discount_value > 0">
               <div class="flex justify-between">
                 <span>Discount:</span>
                 <div>
                   <span
-                    x-text="$store.edit.invoiceItems.invoice.discount_type === 1
-                    ? ($store.edit.invoiceItems.invoice.discount_value + '%')
-                    : ('£' + $store.edit.invoiceItems.invoice.discount_value)"></span>
+                    x-text="$store.edit.currentInvoice.totals.discount_type === 1
+                    ? ($store.edit.currentInvoice.totals.discount_value + '%')
+                    : ('£' + $store.edit.currentInvoice.totals.discount_value)"></span>
                   <span
-                    x-show="$store.edit.invoiceItems.invoice.discount_type === 1"
-                    x-text="`(£${$store.edit.invoiceItems.invoice.discVal_ifPercent})`"></span>
+                    x-show="$store.edit.currentInvoice.totals.discount_type === 1"
+                    x-text="`(£${$store.edit.currentInvoice.totals.discVal_ifPercent})`"></span>
                 </div>
               </div>
             </template>
             <div class="flex justify-between">
               <span>VAT:</span>
-              <span x-text="'£' + $store.edit.invoiceItems.invoice.vat"></span>
+              <span x-text="'£' + $store.edit.currentInvoice.totals.vat"></span>
             </div>
             <div class="flex justify-between">
               <span>Total:</span>
-              <span class="font-semibold" x-text="'£' + $store.edit.invoiceItems.invoice.total"></span>
+              <span class="font-semibold" x-text="'£' + $store.edit.currentInvoice.totals.total"></span>
             </div>
-            <template x-if="$store.edit.invoiceItems.invoice.deposit_value > 0">
+            <template x-if="$store.edit.currentInvoice.totals.deposit_value > 0">
               <div class="flex justify-between">
                 <span>Deposit:</span>
                 <div>
                   <span
-                    x-text="$store.edit.invoiceItems.invoice.deposit_type === 1 ? ($store.edit.invoiceItems.invoice.deposit_value + '%') : ('£' + $store.edit.invoiceItems.invoice.deposit_value)"></span>
+                    x-text="$store.edit.currentInvoice.totals.deposit_type === 1 ? ($store.edit.currentInvoice.totals.deposit_value + '%') : ('£' + $store.edit.currentInvoice.totals.deposit_value)"></span>
                   <span
-                    x-show="$store.edit.invoiceItems.invoice.deposit_type === 1"
-                    x-text="`(£${$store.edit.invoiceItems.invoice.depoVal_ifPercent})`"></span>
+                    x-show="$store.edit.currentInvoice.totals.deposit_type === 1"
+                    x-text="`(£${$store.edit.currentInvoice.totals.depoVal_ifPercent})`"></span>
                 </div>
               </div>
             </template>
             <div class="flex justify-between font-semibold">
               <span>Remaining:</span>
-              <span x-text="'£' + ($store.edit.invoiceItems.invoice.remaining)"></span>
+              <span x-text="'£' + ($store.edit.currentInvoice.totals.remaining_balance)"></span>
             </div>
           </div>
           <div
             class="flex w-[70%] p-4 items-end justify-around bg-vlp rounded border-vls/60 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow-md dark:shadow">
             <div class="flex justify-around w-full">
-              <button
-                @click="$store.edit.deleteInvoice($store.edit.invoiceItems.invoice.id)"
-                class="btn-sec flex items-center">
+              <button @click="$store.edit.deleteInvoice()" class="btn-sec flex items-center">
                 <svg class="size-4 mr-1">
                   <use href="/icons/icons.svg#trash" />
                 </svg>
                 Delete
               </button>
+
+              <button @click="$store.pdfStore.generateInvoice()" class="modal-btn-sec flex items-center">
+                <svg class="size-4 mr-1">
+                  <use href="/icons/icons.svg#trash" />
+                </svg>
+                PDF
+              </button>
+
               <!-- Button to open full parent edit modal -->
-              <button @click="$store.edit.openParentEditModal()" class="modal-btn-prim">
+              <button @click="$store.edit.editInvoice()" class="modal-btn-prim">
                 <svg class="size-4 mr-1">
                   <use href="/icons/icons.svg#editor" />
                 </svg>
@@ -145,6 +152,161 @@
       </div>
     </div>
   </template>
+  <!-- Viewing Copy invoice -->
+  <template x-if="$store.edit.invoiceViewMode === 'viewCopy'">
+    <div x-data class="overflow-y-auto h-full p-2 text-vls2 dark:text-vds table-scrollbar">
+      <!-- Header: Copy Invoice Info -->
+      <div
+        class="mb-2 flex items-center rounded bg-vls2 text-vlp dark:bg-vdp border border-vls/40 shadow p-2 text-base">
+        <span class="mr-2">Invoice:</span>
+        <span x-text="$store.edit.currentInvoice.invoice_number" class="font-medium"></span>
+        <div class="flex w-full items-center place-self-end justify-end">
+          <span class="mr-2">Date:</span>
+          <span x-text="$store.edit.currentInvoice.totals.date" class="mr-4 font-medium"></span>
+          <p class="mr-2">Due-by-date:</p>
+          <span x-text="$store.edit.currentInvoice.totals.due_by_date" class="font-medium"></span>
+        </div>
+      </div>
+      <!-- Client Details -->
+      <div class="mb-2 flex flex-col justify-between rounded bg-vlp shadow dark:bg-vdp2 border border-vls/40 p-2">
+        <div class="flex justify-between">
+          <p>Client name:</p>
+          <span x-text="$store.clients.selectedClient?.name"></span>
+        </div>
+        <div class="flex justify-between">
+          <p>Company:</p>
+          <span x-text="$store.clients.selectedClient?.company_name"></span>
+        </div>
+        <div class="flex justify-between">
+          <p>Address:</p>
+          <span x-text="$store.clients.selectedClient?.address"></span>
+        </div>
+        <div class="flex justify-between">
+          <p>Email:</p>
+          <span x-text="$store.clients.selectedClient?.email"></span>
+        </div>
+      </div>
+      <!-- Invoice Items Table -->
+      <div class="relative p-2 border rounded border-vls/40">
+        <input
+          type="text"
+          placeholder="Search invoice items..."
+          class="srch-style"
+          x-model="$store.edit.currentInvoice.searchQuery" />
+        <div class="relative py-0 overflow-y-auto table-scrollbar" style="max-height: 30vh">
+          <table class="w-[calc(100%-10px)] table-auto border-separate px-0.5" style="border-spacing: 0 10px">
+            <thead class="sticky top-0 table-head-style border-clipper">
+              <tr>
+                <th class="border text-left border-transparent round-left-border p-1.5 text-base w-[50%]">Name</th>
+                <th class="p-1.5 text-left w-[15%]">Type</th>
+                <th class="p-1.5 text-right w-[15%]">Qty</th>
+                <th class="p-1.5 text-right w-[20%] round-right-border">Price</th>
+              </tr>
+            </thead>
+            <tbody class="table-body-style table-scrollbar">
+              <template x-for="item in $store.edit.filteredItems" :key="item.frontendId">
+                <tr class="border-hover-ring-efect">
+                  <td class="p-1 truncate round-left-border text-sm" x-text="item.name" style="width: 50%"></td>
+                  <td class="p-1 text-sm" x-text="item.type" style="width: 15%"></td>
+                  <td class="p-1 text-right text-sm" x-text="item.quantity" style="width: 15%"></td>
+                  <td
+                    class="p-1 text-right round-right-border text-sm"
+                    x-text="'£' + item.price"
+                    style="width: 20%"></td>
+                </tr>
+              </template>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- Invoice Summary & Action Buttons -->
+      <div class="flex my-2">
+        <!-- Summary -->
+        <div
+          class="text-sm flex flex-col w-[30%] p-4 gap-4 mr-2 bg-vlp rounded border-vls/60 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow-md dark:shadow">
+          <h2 class="font-semibold text-base">Copy Invoice Summary</h2>
+          <div class="flex justify-between">
+            <span>Subtotal:</span>
+            <span x-text="'£' + ($store.edit.currentInvoice.total_pre_discount ?? 0)"></span>
+          </div>
+          <!-- Discount (if present) -->
+          <template x-if="$store.edit.currentInvoice.discount_value > 0">
+            <div class="flex justify-between">
+              <span>Discount:</span>
+              <div>
+                <span
+                  x-text="$store.edit.currentInvoice.discount_type === 1 ? ($store.edit.currentInvoice.discount_value + '%') : ('£' + $store.edit.currentInvoice.discount_value)"></span>
+                <span
+                  x-show="$store.edit.currentInvoice.discount_type === 1"
+                  x-text="`(£${$store.edit.currentInvoice.discVal_ifPercent})`"></span>
+              </div>
+            </div>
+          </template>
+          <div class="flex justify-between">
+            <span>VAT:</span>
+            <span x-text="'£' + ($store.edit.currentInvoice.vat ?? 0)"></span>
+          </div>
+          <div class="flex justify-between">
+            <span>Total:</span>
+            <span class="font-semibold" x-text="'£' + ($store.edit.currentInvoice.total ?? 0)"></span>
+          </div>
+          <!-- Deposit (if present) -->
+          <template x-if="$store.edit.currentInvoice.deposit_value > 0">
+            <div class="flex justify-between">
+              <span>Deposit:</span>
+              <div>
+                <span
+                  x-text="$store.edit.currentInvoice.deposit_type === 1 ? ($store.edit.currentInvoice.deposit_value + '%') : ('£' + $store.edit.currentInvoice.deposit_value)"></span>
+                <span
+                  x-show="$store.edit.currentInvoice.deposit_type === 1"
+                  x-text="`(£${$store.edit.currentInvoice.depoVal_ifPercent})`"></span>
+              </div>
+            </div>
+          </template>
+          <div class="flex justify-between font-semibold">
+            <span>Remaining:</span>
+            <span x-text="'£' + ($store.edit.currentInvoice.remaining_balance ?? 0)"></span>
+          </div>
+        </div>
+        <!-- Action Buttons -->
+        <div
+          class="flex w-[70%] p-4 items-end justify-around bg-vlp rounded border-vls/60 border text-vls3 dark:bg-vdp dark:text-vds dark:border-vls/40 shadow-md dark:shadow">
+          <div class="flex justify-around w-full">
+            <button
+              @click="$store.edit.deleteInvoice($store.edit.currentInvoice.invoice_id, $store.edit.currentInvoice.isCopy)"
+              class="btn-sec flex items-center">
+              <svg class="size-4 mr-1">
+                <use href="/icons/icons.svg#trash" />
+              </svg>
+              Delete Copy
+            </button>
+            <button
+              @click="$store.pdfStore.generateInvoice($store.edit.currentInvoice.invoice_id, $store.edit.currentInvoice.isCopy)"
+              class="modal-btn-sec flex items-center">
+              <svg class="size-4 mr-1">
+                <use href="/icons/icons.svg#pdf" />
+              </svg>
+              PDF
+            </button>
+            <button @click="$store.edit.editInvoice()" class="modal-btn-prim flex items-center">
+              <svg class="size-4 mr-1">
+                <use href="/icons/icons.svg#editor" />
+              </svg>
+              Edit Copy
+            </button>
+          </div>
+        </div>
+      </div>
+      <!--Note Section -->
+      <template x-if="$store.edit.currentInvoice.totals.note">
+        <div class="mt-3 p-2 border rounded border-vls/30 bg-gray-50 dark:bg-vdp/70 text-xs">
+          <strong>Note:</strong>
+          <p x-text="$store.edit.currentInvoice.totals.note"></p>
+        </div>
+      </template>
+    </div>
+  </template>
+
   <!-- Edit Invoice Modal -->
   <div id="modal-edit"></div>
 
